--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,6 +9,11 @@ html {
 }
 
 /* Write your solution here */
-@media only screen (min-width:1090px){
-  
+@media only screen and (min-width:1090px){
+  #monkey{
+    top: 0;
+    right:0;
+    position: absolute;
+    
+  }
 }
